appId: ${APP_ID}
---
- runFlow:
    when:
      notVisible: "Bundled Assets"
    commands:
      - tapOn: "Playground"
- scrollUntilVisible:
    element:
      text: "Bundled Assets"
    direction: DOWN
- tapOn: "Bundled Assets"
- assertVisible: "Bundled Assets Demo"
- tapOn: "Unzip Assets"
- waitForAnimationToEnd:
    timeout: 10000
- assertVisible: "Extracted To"
- extendedWaitUntil:
    visible: "Files:"
    timeout: 10000
- assertVisible: "Files:"
